--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
